--- a/todo
+++ b/todo
@@ -1,4 +1,4 @@
 
 //configuring a debugger or trying to use gdb it in terminal maybe?
 //finally upsolving
-//Finallyy reading the book and making conspectus and solving problems on cses.fisss
+//Finallyy reading the book and making conspectus and solving problems on cses.fi
