--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,7 @@
 -colingalen dp and recursion
 -finally upsolving
 -Finallyy reading the book and making conspectus and solving problems on cses.fi! <3
+
+-shortcut for makedirs.py
+
+-save vscode configuration on git
