now saving tests as well

--- a/todo.txt
+++ b/todo.txt
@@ -1,16 +1,23 @@
 
--finally upsolving
+general solving plans:
+-upsolving
 -colingalen dp and recursion
 -Finallyy reading the book and making conspectus and solving problems on cses.fi! <3
 
--save vscode configuration on git
-
--shortcut for makedirs.py
-
-
-topics or questions:
-prove formula for divisor count
 
 
 smaller things:
-analyze time spent on task L16112024
+
+
+
+
+maybe:
+-prove formula for divisor count
+
+
+
+
+
+technical:
+-save vscode configuration on git
+-shortcut for makedirs.py
